# konnoohmachi

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  README.md  benchmark.py  pyproject.toml
.github/workflows/: .python.yml  python.yml  release.yml  release_cratesio.yml  release_pypi.yml  rust.yml
benches/: smoothing.rs
src/: lib.rs  main.rs  my_benchmark.rs
tests/: benchmark.py  conftest.py  reference.py  test_konnoohmachi.py
