[package]
name = "konnoohmachi"
version = "1.0.0"
authors = ["Marius Kriegerowski <marius.kriegerowski@gmail.com>"]
license = "MIT"
edition = "2021"
description = "Efficient spectral smoothing"

[lib]
crate-type = ["cdylib"]

[dependencies]
ndarray = {version="0.15.6"}
numpy = "0.15"

[dependencies.pyo3]
version = "0.15.1"
features = ["extension-module"]
