[package]
name = "konnoohmachi"
version = "1.0.0"
authors = ["Marius Kriegerowski <marius.kriegerowski@gmail.com>"]
license = "MIT"
edition = "2021"
description = "Efficient spectral smoothing"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ndarray = {version="0.17"}
numpy = "0.29"

[dependencies.pyo3]
version = "0.29"
features = ["extension-module"]

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "smoothing"
harness = false
