[project]
name = "konnoohmachi"
version = "0.2.0"
description = "Spectral smoothing in Rust/Python"
readme = "README.md"
python = "^3.7"
repository = "https://github.com/HerrMuellerluedenscheid/konnoohmachi"

keywords = ["seismology", "spectral smoothing"]

classifiers = [
    "Topic :: Software Development"
]

[dev-dependencies]
black = { version = "^18.3-alpha.0", python = "^3.7" }

[project.optional-dependencies]
tests = [
    'numpy ~= 1.20.0',
    'obspy',
]

[build-system]
requires = ["maturin>=0.11.,<0.12"]
build-backend = "maturin"
