[project]
name = "konnoohmachi"
version = "1.0.0"
description = "Spectral smoothing in Rust/Python"
readme = "README.md"
python = "^3.7"
repository = "https://github.com/HerrMuellerluedenscheid/konnoohmachi"

keywords = ["seismology", "spectral smoothing"]

classifiers = [
    "Topic :: Software Development"
]

[dev-dependencies]
black = { version = "^18.3-alpha.0", python = "^3.7" }

[project.optional-dependencies]
tests = [
    'numpy >= 1.21',
    'obspy',
    'pytest',
]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"
